lib/src/byte_vector.g.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
import 'dart:ffi' as ffi;

@ffi.Native<ffi.Pointer<ByteVector> Function()>()
external ffi.Pointer<ByteVector> bv_create();

@ffi.Native<ffi.Pointer<ByteVector> Function(ffi.Size)>()
external ffi.Pointer<ByteVector> bv_create_with_capacity(int capacity);

@ffi.Native<ffi.Void Function(ffi.Pointer<ByteVector>)>()
external void bv_destroy(ffi.Pointer<ByteVector> bv);

@ffi.Native<ffi.Void Function(ffi.Pointer<ByteVector>, ffi.Size)>()
external void bv_expand_length(ffi.Pointer<ByteVector> bv, int expand);

@ffi.Native<ffi.Void Function(ffi.Pointer<ByteVector>, ffi.Uint8)>()
external void bv_push(ffi.Pointer<ByteVector> bv, int byte);

@ffi.Native<ffi.Uint8 Function(ffi.Pointer<ByteVector>)>()
external int bv_pop(ffi.Pointer<ByteVector> bv);

@ffi.Native<ffi.Uint8 Function(ffi.Pointer<ByteVector>, ffi.Size)>()
external int bv_get(ffi.Pointer<ByteVector> bv, int index);

@ffi.Native<ffi.Void Function(ffi.Pointer<ByteVector>, ffi.Size, ffi.Uint8)>()
external void bv_set(ffi.Pointer<ByteVector> bv, int index, int byte);

@ffi.Native<ffi.Void Function(ffi.Pointer<ByteVector>)>()
external void bv_clear(ffi.Pointer<ByteVector> bv);

final class ByteVector extends ffi.Struct {
  external ffi.Pointer<ffi.Uint8> data;

  @ffi.Size()
  external int len;

  @ffi.Size()
  external int cap;
}
